5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1674_1101.log
== TEST (2019-04-25 12:41:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo" inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if (inst == "R"):
	if (cons <= 500):
		print("Valor total: R$", x1)
	elif (cons > 500):
		print("Valor total: R$", x2)
elif (inst = "C"):
	elif (cons <= 1000):
		print("Valor total: R$", x3)
	elif (cons > 1000):
		print("Valor total: R$", x4)
else:
	elif (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
-- ERROR:
File "XXXX", line 6
    print("Entradas:", cons, "kWh", "e", "tipo" inst)
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:43:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo" inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if (inst == "R"):
	if (cons <= 500):
		print("Valor total: R$", x1)
	elif (cons > 500):
		print("Valor total: R$", x2)
elif (inst = "C"):
	elif (cons <= 1000):
		print("Valor total: R$", x3)
	elif (cons > 1000):
		print("Valor total: R$", x4)
elif (inst = "I"):
	elif (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 6
    print("Entradas:", cons, "kWh", "e", "tipo" inst)
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:44:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if (inst == "R"):
	if (cons <= 500):
		print("Valor total: R$", x1)
	elif (cons > 500):
		print("Valor total: R$", x2)
elif (inst = "C"):
	elif (cons <= 1000):
		print("Valor total: R$", x3)
	elif (cons > 1000):
		print("Valor total: R$", x4)
elif (inst = "I"):
	elif (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 16
    elif (inst = "C"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:45:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if (inst == "R"):
	if (cons <= 500):
		print("Valor total: R$", x1)
	elif (cons > 500):
		print("Valor total: R$", x2)
if (inst = "C"):
	elif (cons <= 1000):
		print("Valor total: R$", x3)
	elif (cons > 1000):
		print("Valor total: R$", x4)
if (inst = "I"):
	elif (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 16
    if (inst = "C"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:45:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if (inst == "R"):
	if (cons <= 500):
		print("Valor total: R$", x1)
	elif (cons > 500):
		print("Valor total: R$", x2)
elif (inst = "C"):
	elif (cons <= 1000):
		print("Valor total: R$", x3)
	elif (cons > 1000):
		print("Valor total: R$", x4)
elif (inst = "I"):
	elif (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 16
    elif (inst = "C"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:57:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0):
	if (cons <= 500):
		print("Valor total: R$", x1)
	else:
		print("Valor total: R$", x2)
if ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
if ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 11
    if ((inst == "R") and (cons > 0):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:57:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0)):
	if (cons <= 500):
		print("Valor total: R$", x1)
	else:
		print("Valor total: R$", x2)
if ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
if ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", x3)
	else:
		print("Valor total: R$", x4)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:58:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0)):
	if (cons <= 500):
		print("Valor total: R$", x1)
	else:
		print("Valor total: R$", x2)
if ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", y1)
	else:
		print("Valor total: R$", y2)
if ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", y1)
	else:
		print("Valor total: R$", y2)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:58:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("Digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0)):
	if (cons <= 500):
		print("Valor total: R$", x1)
	else:
		print("Valor total: R$", x2)
if ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", y1)
	else:
		print("Valor total: R$", y2)
if ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", y1)
	else:
		print("Valor total: R$", y2)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 13:01:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("Digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0)):
	if (cons <= 500):
		print("Valor total: R$", round(x1, 2))
	else:
		print("Valor total: R$", round(x2, 2))
if ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", round(y1, 2))
	else:
		print("Valor total: R$", round(y2, 2))
if ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", round(y1, 2))
	else:
		print("Valor total: R$", round(y2, 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 13:03:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("Digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0)):
	if (cons <= 500):
		print("Valor total: R$", round(x1, 2))
	else:
		print("Valor total: R$", round(x2, 2))
elif ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", round(y1, 2))
	else:
		print("Valor total: R$", round(y2, 2))
elif ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", round(y1, 2))
	else:
		print("Valor total: R$", round(y2, 2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 13:03:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
cons = float(input("Digite aqui o consumo de energia: "))
inst = input("Digite aqui o tipo de instalacao: ").upper()
print("Entradas:", cons, "kWh", "e", "tipo", inst)
x1 = cons * 0.44
x2 = cons * 0.65
y1 = cons * 0.55
y2 = cons * 0.60
if ((inst == "R") and (cons > 0)):
	if (cons <= 500):
		print("Valor total: R$", round(x1, 2))
	else:
		print("Valor total: R$", round(x2, 2))
elif ((inst == "C") and (cons > 0)):
	if (cons <= 1000):
		print("Valor total: R$", round(y1, 2))
	else:
		print("Valor total: R$", round(y2, 2))
elif ((inst == "I") and (cons > 0)):
	if (cons <= 5000):
		print("Valor total: R$", round(y1, 2))
	else:
		print("Valor total: R$", round(y2, 2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.257411
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
